# total-recall-web

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  sw.js
src/: lib.rs
src/actions/: authentication.rs  cache.rs  cards.rs  decks.rs  mod.rs  session.rs  sets.rs
src/components/: action_bar.rs  app_frame.rs  card.rs  checkbox.rs  dialog.rs  link.rs  mod.rs  pager.rs  score_meter.rs  side_menu.rs  table.rs
src/components/form/: button.rs  button_link.rs  combobox.rs  mod.rs  text_input.rs
src/components/icons/: checkmark_small.rs  dash_small.rs  mod.rs
src/messages/: authentication.rs  cache.rs  cards.rs  decks.rs  mod.rs  routing.rs  session.rs  sets.rs
src/operations/: authentication.graphql  authentication.rs  cache.rs  cards.graphql  cards.rs  decks.graphql  decks.rs  mod.rs  routing.rs  session.graphql  session.rs  sets.graphql  sets.rs
src/state/: authentication.rs  cache.rs  entities.rs  mod.rs  routing.rs  session.rs
src/state/ui/: add_card_screen.rs  add_deck_screen.rs  add_set_screen.rs  card_details_screen.rs  card_link_screen.rs  cards_screen.rs  deck_details_screen.rs  decks_screen.rs  edit_card_link_screen.rs  mod.rs  register_screen.rs  set_details_screen.rs  sets_screen.rs
src/utilities/: gql.rs  mod.rs  super_memo.rs
src/view/: home.rs  mod.rs  not_found.rs  user_manual.rs
src/view/app/: add_card.rs  add_deck.rs  add_set.rs  card_details.rs  deck_cards.rs  deck_details.rs  deck_sets.rs  decks.rs  mod.rs  set_details.rs  study.rs
src/view/auth/: mod.rs  register.rs  sign_in.rs
