[package]
version = "0.1.0"
name = "total-recall-web"
repository = "https://github.com/seed-rs/seed-quickstart"
authors = ["Nick Senger <nicholas.senger@synthego.com>"]
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies]
seed_hooks = "0.1.4"
graphql_client = "^0.9"
rand = "^0.7"
seed = { git = "https://github.com/seed-rs/seed", rev = "0a538f0" }
serde = "^1.0"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
